Added daobet naming and added molecule infra tests (#17)
* Added daobet naming and added molecule infra tests

* Added contracts versioning

* Added the making eosio.msig a privileged account

--- a/defaults/main/haya.yml
+++ b/defaults/main/haya.yml
@@ -4,6 +4,7 @@
 bc_haya_comp_state_wallet: absent
 bc_haya_comp_state_boot: absent
 bc_haya_comp_state_prod: absent
+bc_haya_comp_state_full: absent
 bc_haya_comp_state_monitoring: absent
 bc_haya_comp_state_bench: absent
 bc_haya_plugin_randpa: "present"
@@ -15,7 +16,7 @@ bc_path_contracts: "{{ bc_path_general }}/{{ bc_name }}/contracts"
 bc_path_config_template: "configs/nodeos/config.ini.j2"
 bc_path_genesis_template: "configs/nodeos/genesis.json.j2"
 bc_path_logger_template: "configs/nodeos/logger.json.j2"
-bc_haya_cli: "docker run --rm --network=host -v /:/host:ro -v {{ bc_path_general }}/{{ bc_name }}/haya-cli:/opt/haya/haya-cli {{ bc_haya_image }} /opt/haya/bin/haya-cli "
+bc_haya_cli: "docker run --rm --network=host -v /{{ bc_path_contracts }}:/host/{{ bc_path_contracts }}:ro -v {{ bc_path_general }}/{{ bc_name }}/{{ bc_name }}-cli:/opt/{{ bc_name }}/{{ bc_name }}-cli {{ bc_haya_image }} /opt/{{ bc_name }}/bin/{{ bc_name }}-cli "
 
 bc_haya_boot:
   public_ip: "{{ ansible_default_ipv4.address }}"
