--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -10,6 +10,11 @@
     name: "{{ bc_name }}-prod"
     restart: true
 
+- name: restart fullnode
+  docker_container:
+    name: "{{ bc_name }}-full"
+    restart: true
+
 - name: resume producer
   uri:
     url: "http://localhost:{{ bc_haya_node_http_port }}/v1/producer/resume"
