--- a/tasks/blockchain/common/boot-contracts-dao.yml
+++ b/tasks/blockchain/common/boot-contracts-dao.yml
@@ -77,11 +77,6 @@
     - never
     - debug
 
-- name: copy contracts
-  copy:
-    src: "contracts/{{ bc_haya_contracts }}/"
-    dest: "{{ bc_path_contracts }}"
-
 - name: set abi system contracts
   loop: "{{ bc_haya_system_contracts }}"
   register: set_abi_system_contracts
@@ -123,6 +118,8 @@
   tags:
     - never
     - debug
+
+- include_tasks: "boot-checks.yml"
 
 - name: create token
   register: create_token
@@ -182,6 +179,35 @@
     - never
     - debug
 
+- name: Make eosio.msig a privileged account
+  register: make_msig_privileged_account
+  shell: |
+    {{ bc_haya_cli }} \
+    --wallet-url=http://localhost:{{ bc_haya_wallet.port }} \
+    --url=http://localhost:{{ bc_haya_node_http_port }} \
+    push action eosio setpriv '["eosio.msig", 1]' -p eosio@active && \
+    touch {{ bc_path_state }}/makemsigprivilegedaccaont-eosio
+  args:
+    creates: "{{ bc_path_state }}/makemsigprivilegedaccaont-eosio"
+    chdir: "{{ bc_path_contracts }}"
+
+- name: Show stderr from make eosio.msig a privileged account task
+  debug:
+    msg: "DEBUG: \n stderr:{{ item.stderr }}\n stdout:{{ item.stdout }}"
+  loop: "{{ make_msig_privileged_account.results }}"
+  tags:
+    - never
+    - debug
+
+- name: Stake for vote
+  shell: |
+    {{ bc_haya_cli }} \
+    --wallet-url=http://localhost:{{ bc_haya_wallet.port }} \
+    --url=http://localhost:{{ bc_haya_node_http_port }} \
+    system delegatebw eosio eosio --buy-ram-bytes "10000000" "100.0000 BET" "100.0000 BET" "30000000.0000 BET" -p eosio && \
+    touch {{ bc_path_state }}/stakevoting
+  args:
+    creates: "{{ bc_path_state }}/stakevoting"
 
 - name: create producers account
   loop: "{{ bc_haya_producer_accounts }}"
@@ -191,8 +217,8 @@
     --wallet-url=http://localhost:{{ bc_haya_wallet.port }} \
     --url=http://localhost:{{ bc_haya_node_http_port }} \
     system newaccount -x 45 eosio --transfer {{ item.name }} \
-    {{ item.pub_key }} --stake-net "25000000.0000 BET" \
-    --stake-cpu "25000000.0000 BET" --buy-ram-kbytes 8192 && \
+    {{ item.pub_key }} --stake-net "10.0000 BET" \
+    --stake-cpu "10.0000 BET" --stake-vote "1000000.0000 BET" --buy-ram-kbytes 8192 && \
     touch {{ bc_path_state }}/createprodacc-{{ item.name }}
   args:
     creates: "{{ bc_path_state }}/createprodacc-{{ item.name }}"
@@ -226,6 +252,14 @@
   loop_control:
     index_var: index
 
+- name: Form producers list
+  loop: "{{ bc_haya_producer_accounts | list }}"
+  set_fact:
+    prods_for_vote: "{{ prods_for_vote|default('') + ' ' + item.name }}"
+  when: bc_peers_ip|length > index + 1
+  loop_control:
+    index_var: index
+
 - name: Vote producers account
   loop: "{{ bc_haya_producer_accounts }}"
   register: vote_producers_account
@@ -233,10 +267,10 @@
     {{ bc_haya_cli }} \
     --wallet-url=http://localhost:{{ bc_haya_wallet.port }} \
     --url=http://localhost:{{ bc_haya_node_http_port }} \
-    system voteproducer prods {{ item.name }} {{ item.name }} && \
-    touch {{ bc_path_state }}/voteprodacc-{{ item.name }}
+    system voteproducer prods eosio {{ prods_for_vote }} && \
+    touch {{ bc_path_state }}/voteprodaccs
   args:
-    creates: "{{ bc_path_state }}/voteprodacc-{{ item.name }}"
+    creates: "{{ bc_path_state }}/voteprodaccs"
   when: bc_peers_ip|length > index + 1
   loop_control:
     index_var: index
