--- a/tasks/blockchain/common/prod.yml
+++ b/tasks/blockchain/common/prod.yml
@@ -1,5 +1,27 @@
 ---
+- name: set producer account
+  set_fact:
+    producer_account: "{{ bc_haya_producer_accounts[bc_haya_node_id | int] }}"
+  tags:
+    - update
+
+- debug:
+    msg: "{{ bc_haya_node_id | int }}"
+  tags:
+    - never
+    - prod
+    - debug
+
+- debug:
+    msg: "{{ producer_account }}"
+  tags:
+    - never
+    - prod
+    - debug
+
 - name: "Make directory structure"
+  tags:
+    - prod
   file:
     path: "{{ item }}"
     state: directory
@@ -9,33 +31,45 @@
     - "{{ bc_path_state }}"
 
 - name: set config.ini
+  tags:
+    - update
   vars:
-    producer_name: "{{ bc_haya_boot.name }}"
-    producer_pub_key: "{{ bc_haya_boot.pub_key }}"
-    producer_pvt_key: "{{ bc_haya_boot.pvt_key }}"
+    producer_name: "{{ producer_account.name }}"
+    producer_pub_key: "{{ producer_account.pub_key }}"
+    producer_pvt_key: "{{ producer_account.pvt_key }}"
   template:
-    src: "{{ bc_path_config_template }}"
+    src: configs/nodeos/config.ini.j2
     dest: "{{ bc_path_config }}/config.ini"
+  notify:
+    - restart prodnode
 
 - name: set genesis.json
+  tags:
+    - update
   template:
-    src: "{{ bc_path_genesis_template }}"
+    src: configs/nodeos/genesis.json.j2
     dest: "{{ bc_path_config }}/genesis.json"
+  notify:
+    - restart prodnode
 
 - name: set logger.json
   tags:
     - update
   template:
-    src: "{{ bc_path_logger_template }}"
+    src: configs/nodeos/logger.json.j2
     dest: "{{ bc_path_config }}/logger.json"
+  notify:
+    - restart prodnode
 
-- name: Start boot-node container
-  register: _start_boot_node
+- name: "Start {{ bc_name }}-{{ bc_component_name }} container"
+  tags:
+    - update
+  register: start_prod_container
   docker_container:
     name: "{{ bc_name }}-{{ bc_component_name }}"
     image: "{{ bc_haya_image }}"
     command: |
-      /opt/haya/bin/haya-node
+      /opt/{{ bc_name }}/bin/{{ bc_name }}-node
       --config-dir={{ bc_path_config }}
       --genesis-json={{ bc_path_config }}/genesis.json
       --logconf={{ bc_path_config }}/logger.json
@@ -44,7 +78,6 @@
     volumes:
       - "{{ bc_path_state }}:/root/.local"
       - "{{ bc_path_config }}:{{ bc_path_config }}"
-      - "{{ bc_path_contracts }}:{{ bc_path_contracts }}"
       - "/tmp/cores:/tmp/cores"
     capabilities:
       - IPC_LOCK
@@ -56,12 +89,15 @@
       fluentd-async-connect: "{{ 'true' if bc_docker_log_driver == 'fluentd' else omit }}"
       fluentd-address: "{{ 'localhost:24224' if bc_docker_log_driver == 'fluentd' else omit  }}"
 
-- name: "Check container health"
+- name: "Resume producer"
   uri:
-    url: "http://localhost:{{ bc_haya_node_http_port }}/v1/chain/get_info"
-    method: GET
-    status_code: 200
-  register: boot_status
+    url: "http://localhost:{{ bc_haya_node_http_port }}/v1/producer/resume"
+    method: POST
+    body_format: form-urlencoded
+    status_code: 201
+  register: producer_resume
   retries: 10
   delay: 5
-  until: boot_status is success
+  until: producer_resume is success
+  tags:
+    - update
