--- a/tank/playbook.yml
+++ b/tank/playbook.yml
@@ -129,6 +129,7 @@
   become: true
   vars:
     bc_haya_image: "mixbytes/haya:v0.2.1"
+    bc_haya_comp_state_wallet: present
     bc_haya_comp_state_prod: present
     bc_haya_comp_state_bench: present
     install_promstack: true
