install haya bench config

--- a/tank/send_load_profile.yml
+++ b/tank/send_load_profile.yml
@@ -7,4 +7,4 @@
       tags: [send_load_profile]
       copy:
         src: "{{ load_profile_local_file }}"
-        dest: "{{ load_profile_remote_file }}"
+        dest: "/opt/bench/profile.js"
