fix bench config

--- a/defaults/main/bench.yml
+++ b/defaults/main/bench.yml
@@ -12,7 +12,7 @@ bench_config:
   maxActivePromises: 20
 
   prometheusTelemetry:
-    enable: false
+    enable: "false"
     url: "http://127.0.0.1:9091"
 
   telemetryStepInterval: 1000
