--- a/tasks/init.yml
+++ b/tasks/init.yml
@@ -12,16 +12,19 @@
     - always
   set_fact:
     monitoring_peer_ip: "{{ groups['monitoring_peer'] | map('extract', hostvars, ['ansible_'+bc_private_interface, 'ipv4', 'address']) | list }}"
+  when: "'monitoring_peer' in groups"
 - name: "Set boot ip address"
   tags:
     - always
   set_fact:
     bc_boot_ip: "{{ groups['bcboot'] | map('extract', hostvars, ['ansible_'+bc_private_interface, 'ipv4', 'address']) | list }}"
+  when: "'bcboot' in groups"
 - name: "Set block producer peers ip addresses"
   tags:
     - always
   set_fact:
     bc_peers_ip: "{{ groups['bcpeers'] | map('extract', hostvars, ['ansible_'+bc_private_interface, 'ipv4', 'address']) | list }}"
+  when: "'bcpeers' in groups"
 - name: "Set all our peers ip addresses"
   tags:
     - always
