--- a/tasks/blockchain/common/prod.yml
+++ b/tasks/blockchain/common/prod.yml
@@ -38,7 +38,7 @@
     producer_pub_key: "{{ producer_account.pub_key }}"
     producer_pvt_key: "{{ producer_account.pvt_key }}"
   template:
-    src: configs/nodeos/config.ini.j2
+    src: "{{ bc_path_config_template }}"
     dest: "{{ bc_path_config }}/config.ini"
   notify:
     - restart prodnode
