--- a/tasks/blockchain/common/prod.yml
+++ b/tasks/blockchain/common/prod.yml
@@ -47,7 +47,7 @@
   tags:
     - update
   template:
-    src: configs/nodeos/genesis.json.j2
+    src: "{{ bc_path_genesis_template }}"
     dest: "{{ bc_path_config }}/genesis.json"
   notify:
     - restart prodnode
@@ -56,7 +56,7 @@
   tags:
     - update
   template:
-    src: configs/nodeos/logger.json.j2
+    src: "{{ bc_path_logger_template }}"
     dest: "{{ bc_path_config }}/logger.json"
   notify:
     - restart prodnode
