--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ language: python
 before_install:
   - sudo apt-get -qq update
 install:
-  - pip install molecule ansible
+  - pip install molecule ansible ansible-lint
 script:
   - ansible-lint .
 notifications:
