CYB-533 activate PREACTIVATE_FEATURE protocol

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
-__pycache__
-*.pyc
-.idea
-/playbook.yml
-notes
-*.out
 *.sublime-project
 *.sublime-workspace
-env
-.vagrant
-*.log
+*.sw[op]
+/.idea/
+
 *.iml
+*.log
+*.out
+*.pyc
+.vagrant
+/playbook.yml
+__pycache__/
