--- a/tasks/blockchain/common/boot-contracts-present.yml
+++ b/tasks/blockchain/common/boot-contracts-present.yml
@@ -53,7 +53,6 @@
     creates: "{{ bc_path_state }}/createsysacc-{{ item }}"
   changed_when: "'executed transaction' in create_system_accounts.stdout"
 
-
 - name: Show stderr from create system accounts task
   debug:
     msg: "DEBUG: \n stderr:{{ item.stderr }}\n stdout:{{ item.stdout }}"
@@ -61,6 +60,23 @@
   tags:
     - never
     - debug
+
+# FIXME:
+#   "message": "protocol feature with digest '0ec7e080177b2c02b278d5088611686b49d739925a92d9bfcacd7fc6b74053bd' has already been activated",
+# (when provisioning)
+- name: Activate the PREACTIVATE_FEATURE protocol
+  shell: |
+    curl --request POST \
+      --url http://localhost:{{ bc_haya_node_http_port }}/v1/producer/schedule_protocol_feature_activations \
+      -d '{"protocol_features_to_activate": ["0ec7e080177b2c02b278d5088611686b49d739925a92d9bfcacd7fc6b74053bd"]}' && \
+    touch {{ bc_path_state }}/activated_PREACTIVATE_FEATURE
+  args:
+    creates: "{{ bc_path_state }}/activated_PREACTIVATE_FEATURE"
+#~  uri:
+#~    url: http://localhost:{{ bc_haya_node_http_port }}/v1/producer/schedule_protocol_feature_activations
+#~    method: POST
+#~    body: '{"protocol_features_to_activate": ["0ec7e080177b2c02b278d5088611686b49d739925a92d9bfcacd7fc6b74053bd"]}'
+#~    status_code: 201
 
 - name: set abi system contracts
   loop: "{{ bc_haya_system_contracts }}"
@@ -172,9 +188,6 @@
     --url=http://localhost:{{ bc_haya_node_http_port }} \
     push action eosio setpriv '["eosio.msig", 1]' -p eosio@active && \
     touch {{ bc_path_state }}/makemsigprivilegedaccaont-eosio
-  args:
-    creates: "{{ bc_path_state }}/makemsigprivilegedaccaont-eosio"
-    chdir: "{{ bc_path_contracts }}"
 
 - name: Show stderr from make eosio.msig a privileged account task
   debug:
